--- a/apps/compute-cf.yml.j2
+++ b/apps/compute-cf.yml.j2
@@ -12,14 +12,8 @@ Parameters:
     Type: Number
     MinValue: 0
 
-  AmiId:
-    Type: AWS::EC2::Image::Id
-
   ContentBucket:
     Type: String
-
-  InstanceTypes:
-    Type: CommaDelimitedList
 
   {% if security_environment == 'EDC' %}
   PermissionsBoundaryPolicyArn:
@@ -48,46 +42,17 @@ Resources:
       GroupDescription: !Sub "Security group for ${AWS::StackName} machines"
       VpcId: !Ref VpcId
 
-  LaunchTemplate:
-    Type: AWS::EC2::LaunchTemplate
-    Properties:
-      LaunchTemplateData:
-        MetadataOptions:
-          HttpTokens: required
-        UserData:
-          Fn::Base64: |-
-            Content-Type: multipart/mixed; boundary="==BOUNDARY=="
-            MIME-Version: 1.0
-
-            --==BOUNDARY==
-            Content-Type: text/cloud-boothook; charset="us-ascii"
-
-            cloud-init-per instance mkfs_ssd mkfs.ext4 /dev/nvme1n1
-            cloud-init-per instance mount_ssd mount /dev/nvme1n1 /var/lib/docker
-
-            --==BOUNDARY==--
-
   ComputeEnvironment:
     Type: AWS::Batch::ComputeEnvironment
     Properties:
       ServiceRole: !GetAtt BatchServiceRole.Arn
       Type: MANAGED
       ComputeResources:
-        Type: SPOT
-        AllocationStrategy: SPOT_CAPACITY_OPTIMIZED
-        MinvCpus: 0
+        Type: FARGATE_SPOT
         MaxvCpus: !Ref MaxvCpus
-        InstanceTypes: !Ref InstanceTypes
-        ImageId: !Ref AmiId
         Subnets: !Ref SubnetIds
-        InstanceRole: !Ref InstanceProfile
         SecurityGroupIds:
           - !Ref SecurityGroup
-        LaunchTemplate:
-          LaunchTemplateId: !Ref LaunchTemplate
-          Version: !GetAtt LaunchTemplate.LatestVersionNumber
-        Tags:
-          Name: !Ref AWS::StackName
 
   SchedulingPolicy:
     Type: AWS::Batch::SchedulingPolicy
@@ -158,32 +123,3 @@ Resources:
       {% endif %}
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AWSBatchServiceRole
-
-  InstanceRole:
-    Type: {{ 'Custom::JplRole' if security_environment in ('JPL', 'JPL-public') else 'AWS::IAM::Role' }}
-    Properties:
-      {% if security_environment in ('JPL', 'JPL-public') %}
-      ServiceToken: !ImportValue Custom::JplRole::ServiceToken
-      Path: /account-managed/hyp3/
-      {% endif %}
-      AssumeRolePolicyDocument:
-        Version: 2012-10-17
-        Statement:
-          Action: sts:AssumeRole
-          Principal:
-            Service: ec2.amazonaws.com
-          Effect: Allow
-      {% if security_environment == 'EDC' %}
-      PermissionsBoundary: !Ref PermissionsBoundaryPolicyArn
-      {% endif %}
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role
-
-  InstanceProfile:
-    Type: AWS::IAM::InstanceProfile
-    Properties:
-      {% if security_environment in ('JPL', 'JPL-public') %}
-      Path: /account-managed/hyp3/
-      {% endif %}
-      Roles:
-        - !Ref InstanceRole
