use fargate-compatible vcpu/memory in step function overrides

--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -133,8 +133,12 @@
       "Result": {
         "ResourceRequirements": [
           {
+            "Type": "VCPU",
+            "Value": "1"
+          },
+          {
             "Type": "MEMORY",
-            "Value": "7900"
+            "Value": "7168"
           }
         ]
       },
@@ -146,8 +150,12 @@
       "Result": {
         "ResourceRequirements": [
           {
+            "Type": "VCPU",
+            "Value": "2"
+          },
+          {
             "Type": "MEMORY",
-            "Value": "15750"
+            "Value": "15360"
           }
         ]
       },
@@ -159,8 +167,12 @@
       "Result": {
         "ResourceRequirements": [
           {
+            "Type": "VCPU",
+            "Value": "8"
+          },
+          {
             "Type": "MEMORY",
-            "Value": "63200"
+            "Value": "61440"
           }
         ]
       },
@@ -172,8 +184,12 @@
       "Result": {
         "ResourceRequirements": [
           {
+            "Type": "VCPU",
+            "Value": "16"
+          },
+          {
             "Type": "MEMORY",
-            "Value": "126000"
+            "Value": "122880"
           }
         ]
       },
