--- a/apps/api/api-cf.yml.j2
+++ b/apps/api/api-cf.yml.j2
@@ -189,6 +189,7 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       Environment:
+        # TODO add domain name as env var
         Variables:
           JOBS_TABLE_NAME: !Ref JobsTable
           USERS_TABLE_NAME: !Ref UsersTable
