get jobs by user_id

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml.j2
@@ -30,6 +30,10 @@ paths:
     get:
       description: Get list of previously run jobs.
       parameters:
+        - name: user_id
+          in: query
+          schema:
+            $ref: "#/components/schemas/user_id"
         - name: status_code
           in: query
           schema:
