--- a/apps/handle-batch-event/handle-batch-event-cf.yml.j2
+++ b/apps/handle-batch-event/handle-batch-event-cf.yml.j2
@@ -64,10 +64,9 @@ Resources:
               - logs:PutLogEvents
             Resource: !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/*"
           - Effect: Allow
-            Action: dynamodb:UpdateItem
-            Resource: !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${JobsTable}*"
-          - Effect: Allow
-            Action: dynamodb:GetItem
+            Action:
+              - dynamodb:GetItem
+              - dynamodb:UpdateItem
             Resource: !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${JobsTable}*"
 
   Lambda:
