Updates from Joe's suggestions

--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -103,7 +103,11 @@
                 {
                   "Variable": "$.job_type",
                   "StringEquals": "WATER_MAP_EQ"
-                }
+                },
+                {
+                  "Variable": "$.job_type",
+                  "StringEquals": "WATER_MAP_TEST"
+                },
               ]
             },
             {
