--- a/apps/scale-cluster/scale-cluster-cf.yml.j2
+++ b/apps/scale-cluster/scale-cluster-cf.yml.j2
@@ -73,9 +73,7 @@ Resources:
               - logs:PutLogEvents
             Resource: !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/*"
           - Effect: Allow
-            Action:
-              - ce:GetCostAndUsage
-              - batch:DescribeComputeEnvironments
+            Action: ce:GetCostAndUsage
             Resource: "*"
           - Effect: Allow
             Action: batch:UpdateComputeEnvironment
